RESOLVED FIXED135112
Fix test crashes when cloning video layer since r171286
https://bugs.webkit.org/show_bug.cgi?id=135112
Summary Fix test crashes when cloning video layer since r171286
Jeremy Jones
Reported 2014-07-20 22:20:02 PDT
Fix test crashes when cloning video layer since r171286
Attachments
Patch (4.99 KB, patch)
2014-07-20 22:37 PDT, Jeremy Jones
eric.carlson: review+
jeremyj-wk: commit-queue-
Jeremy Jones
Comment 1 2014-07-20 22:37:49 PDT
Jeremy Jones
Comment 2 2014-07-20 23:18:49 PDT
Note You need to log in before you can comment on or make changes to this bug.